version/0.12/_sources/api/solver/_autosummary/settings/expression.rst.txt
:orphan:

.. _expression:

expression
==========

.. currentmodule:: ansys.fluent.core.solver.settings_231.expression

.. autoclass:: expression
    :show-inheritance:
    :undoc-members:
.. rubric:: Included in:

==============================================================   =============================================

Parent                                                                                                 Summary

==============================================================   =============================================
:ref:`density <density>`                                                                      'density' child.

:ref:`viscosity <viscosity>`                                                                'viscosity' child.

:ref:`thermal_conductivity <thermal_conductivity>`                               'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient>`                         'absorption_coefficient' child.

:ref:`scattering_coefficient <scattering_coefficient>`                         'scattering_coefficient' child.

:ref:`uds_diffusivities_child <uds_diffusivities_child>`             'child_object_type' of uds_diffusivities.

:ref:`electric_conductivity <electric_conductivity>`                            'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`             'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                  'lithium_diffusivity' child.

:ref:`speed_of_sound <speed_of_sound>`                                                 'speed_of_sound' child.

:ref:`saturation_pressure <saturation_pressure>`                                  'saturation_pressure' child.

:ref:`thermal_conductivity <thermal_conductivity_1>`                             'thermal_conductivity' child.

:ref:`scattering_coefficient <scattering_coefficient_1>`                       'scattering_coefficient' child.

:ref:`viscosity <viscosity_1>`                                                              'viscosity' child.

:ref:`thermal_conductivity <thermal_conductivity_2>`                             'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient_1>`                       'absorption_coefficient' child.

==============================================================   =============================================

