version/0.19/_sources/api/solver/_autosummary/settings/expression.rst.txt
:orphan:

.. _expression:

expression
==========

.. autoclass:: ansys.fluent.core.solver.settings_241.expression.expression
    :show-inheritance:

.. rubric:: Included in:

==============================================================   =============================================

Parent                                                                                                 Summary

==============================================================   =============================================
:ref:`density <density>`                                                                      'density' child.

:ref:`viscosity <viscosity>`                                                                'viscosity' child.

:ref:`thermal_conductivity <thermal_conductivity>`                               'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient>`                         'absorption_coefficient' child.

:ref:`partition_coeff <partition_coeff>`                                              'partition_coeff' child.

:ref:`scattering_coefficient <scattering_coefficient>`                         'scattering_coefficient' child.

:ref:`uds_diffusivities_child <uds_diffusivities_child>`             'child_object_type' of uds_diffusivities.

:ref:`diffusivity <diffusivity>`                                                          'diffusivity' child.

:ref:`diffusivity_0 <diffusivity_0>`                                                    'diffusivity_0' child.

:ref:`diffusivity_1 <diffusivity_1>`                                                    'diffusivity_1' child.

:ref:`diffusivity_2 <diffusivity_2>`                                                    'diffusivity_2' child.

:ref:`radial_diffusivity <radial_diffusivity>`                                     'radial_diffusivity' child.

:ref:`tangential_diffusivity <tangential_diffusivity>`                         'tangential_diffusivity' child.

:ref:`axial_diffusivity <axial_diffusivity>`                                        'axial_diffusivity' child.

:ref:`electric_conductivity <electric_conductivity>`                            'electric_conductivity' child.

:ref:`dual_electric_conductivity <dual_electric_conductivity>`             'dual_electric_conductivity' child.

:ref:`lithium_diffusivity <lithium_diffusivity>`                                  'lithium_diffusivity' child.

:ref:`speed_of_sound <speed_of_sound>`                                                 'speed_of_sound' child.

:ref:`saturation_pressure <saturation_pressure>`                                  'saturation_pressure' child.

:ref:`thermal_conductivity <thermal_conductivity_1>`                             'thermal_conductivity' child.

:ref:`planar_conductivity <planar_conductivity>`                                  'planar_conductivity' child.

:ref:`transverse_conductivity <transverse_conductivity>`                      'transverse_conductivity' child.

:ref:`radial_conductivity <radial_conductivity>`                                  'radial_conductivity' child.

:ref:`tangential_conductivity <tangential_conductivity>`                      'tangential_conductivity' child.

:ref:`axial_conductivity <axial_conductivity>`                                     'axial_conductivity' child.

:ref:`conductivity_0 <conductivity_0>`                                                 'conductivity_0' child.

:ref:`conductivity_1 <conductivity_1>`                                                 'conductivity_1' child.

:ref:`conductivity_2 <conductivity_2>`                                                 'conductivity_2' child.

:ref:`conductivity <conductivity>`                                                       'conductivity' child.

:ref:`scattering_coefficient <scattering_coefficient_1>`                       'scattering_coefficient' child.

:ref:`viscosity <viscosity_1>`                                                              'viscosity' child.

:ref:`thermal_conductivity <thermal_conductivity_2>`                             'thermal_conductivity' child.

:ref:`absorption_coefficient <absorption_coefficient_1>`                       'absorption_coefficient' child.

:ref:`binary_diffusivity <binary_diffusivity>`                                     'binary_diffusivity' child.

==============================================================   =============================================

